[package]
name = "incomeapp"
version = "0.1.0"
authors = ["Nailton Sousa <nailton.osn@gmail.com>"]
edition = "2021"
build = "build.rs"
description = "A desktop app that divides up income"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.4"

[build-dependencies]
slint-build = "1.4"

[package.metadata.bundle]
name =  "Income Divider"
identifier = "io.github.nailton.project.incomeapp"
